<resources>
    <string name="app_name" translatable="false">Kertasku</string>
    <string name="home_title">Your paper</string>
    <string name="search">Search</string>
    <string name="no_book">You don\'t have any book</string>
    <string name="create_new_book">Create new book</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sign_in_text">Do you already have Kertasku account? If you have, please enter your account email address and password</string>
    <string name="sign_in_greeting">Hello!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">I don\'t have Kertasku account</string>
    <string name="sign_in_button">Sign in</string>
    <string name="email_empty_error">Email is required</string>
    <string name="password_empty_error">Password is required</string>
    <string name="sign_in_failed">Failed to sign in</string>
    <string name="sign_in_invalid_user">Email may be wrong</string>
    <string name="sign_in_invalid_credential">Email or password may be wrong</string>
    <string name="sign_up_title">Sign up</string>
    <string name="sign_up_text">Don\'t worry if you don\'t have Kertasku account because we will make it for you. Please enter the email address and the password for your new account</string>
    <string name="sign_network_error">It seem that we have a problem when we tried to connect to our server. Please check your internet connection</string>
    <string name="sign_up_button">Sign up</string>
    <string name="sign_up_success_toast">You are succesfully signed up</string>
    <string name="password_weak_error">Password must be at least 6 letters</string>
    <string name="sign_up_invalid_credential">The email address is malformed</string>
    <string name="sign_up_collision_error">There is already an account using the same email address. Please use another email address</string>
    <string name="settings">Settings</string>
    <string name="notebook">Notebook</string>
</resources>